; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/shlwapi/extr_string.c_FormatDouble.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/shlwapi/extr_string.c_FormatDouble.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@FormatDouble.flfmt = internal constant [3 x i8] c"%f\00", align 1
@LOCALE_USER_DEFAULT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (double, i32, i32, i32)* @FormatDouble to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @FormatDouble(double %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca double, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca [64 x i8], align 16
  %10 = alloca %struct.TYPE_4__, align 4
  %11 = alloca [8 x i8], align 1
  %12 = alloca [8 x i8], align 1
  store double %0, double* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %13 = getelementptr inbounds [64 x i8], [64 x i8]* %9, i64 0, i64 0
  %14 = load double, double* %5, align 8
  %15 = call i32 @snprintfW(i8* %13, i32 64, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @FormatDouble.flfmt, i64 0, i64 0), double %14)
  %16 = getelementptr inbounds [8 x i8], [8 x i8]* %11, i64 0, i64 0
  %17 = getelementptr inbounds [8 x i8], [8 x i8]* %12, i64 0, i64 0
  %18 = call i32 @FillNumberFmt(%struct.TYPE_4__* %10, i8* %16, i32 8, i8* %17, i32 8)
  %19 = load i32, i32* %6, align 4
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @LOCALE_USER_DEFAULT, align 4
  %22 = getelementptr inbounds [64 x i8], [64 x i8]* %9, i64 0, i64 0
  %23 = load i32, i32* %7, align 4
  %24 = load i32, i32* %8, align 4
  %25 = call i32 @GetNumberFormatW(i32 %21, i32 0, i8* %22, %struct.TYPE_4__* %10, i32 %23, i32 %24)
  ret i32 %25
}

declare dso_local i32 @snprintfW(i8*, i32, i8*, double) #1

declare dso_local i32 @FillNumberFmt(%struct.TYPE_4__*, i8*, i32, i8*, i32) #1

declare dso_local i32 @GetNumberFormatW(i32, i32, i8*, %struct.TYPE_4__*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
